--- a/src/style.css
+++ b/src/style.css
@@ -7,23 +7,59 @@
 }
 
 @layer base {
-    body {
-        font-family: var(--font-sans);
-    }
-}
-
-@layer base {
     html {
         color-scheme: light;
     }
-    
+
     html.dark {
         color-scheme: dark;
     }
 
-    #root {
-        @apply h-dvh w-dvw;
+    html.light {
+        color-scheme: light;
     }
+
+    #root {
+        @apply w-full h-dvh;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        @apply font-serif font-bold py-4;
+    }
+
+    h1 {
+        @apply text-6xl;
+    }
+
+    h2 {
+        @apply text-5xl;
+    }
+
+    h3 {
+        @apply text-4xl;
+    }
+
+    h4 {
+        @apply text-3xl;
+    }
+
+    h6 {
+        @apply text-2xl;
+    }
+
+    h6 {
+        @apply text-xl;
+    }
+
+    a, button {
+        @apply font-sans uppercase;
+    }
+
+    .header-group span,
+    .header-group p {
+        @apply py-2;
+    }
+
 }
 
 @keyframes gradient-x {
@@ -37,5 +73,12 @@
 
     100% {
         background-position: 0 50%;
+    }
+}
+
+
+@layer components {
+    .divide-list-dotted li:not(:last-child)::after {
+        @apply content-['•'] mx-2;
     }
 }
